pictor (2.0) UNRELEASED; urgency=low

  * Initial packaging
  * settings.php: prep for installation to /etc/pictor
  * debian/install: fix install typo
  * index.php:
    - print useful error message if no pictures are found
    - generate/cache thumbnails
    - add support to enable/disable search function
    - replace album search with native php code, rather than shell find
  * debian/rules, debian/dirs, debian/links: add support for a thumbnail
    cache dir
  * debian/control: bump standards ver, misc depends
  * debian/rules: install changelog
  * debian/copyright: drop icons artifact from musica

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 26 Jan 2010 23:40:48 -0600