@@ -1,1 +1,1 @@
-var/cache/pictor
+var/cache/pictor/thumbnails
