@@ -8,9 +8,14 @@ pictor (2.0) UNRELEASED; urgency=low
     - generate/cache thumbnails
     - add support to enable/disable search function
     - replace album search with native php code, rather than shell find
+    - deprecate old location method
+    - use php's exif extractor
   * debian/rules, debian/dirs, debian/links: add support for a thumbnail
     cache dir
-  * debian/control: bump standards ver, misc depends
+  * debian/control:
+    - bump standards ver
+    - misc depends
+    - depend on php's imagick module
   * debian/rules: install changelog
   * debian/copyright: drop icons artifact from musica
 
